--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 version: '3'
 
 services:
-  app-server:
+  app-server-java:
     build:
       context: ./
       dockerfile: Dockerfile
     ports:
-      - 8080:8080
+      - 8081:8080
     restart: always
     networks:
       - rede-docker
