--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 
-server.port=8081
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+#
+#spring.datasource.url= jdbc:mysql://127.0.0.1:3306/o-corretor-autenticacao
+#spring.datasource.username=root
+#spring.datasource.password=*281206*
+#spring.jpa.hibernate.ddl-auto=update
