--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,23 @@
 		</dependency>
 
 <!--		<dependency>-->
+<!--			<groupId>org.springframework.boot</groupId>-->
+<!--			<artifactId>spring-boot-starter-security</artifactId>-->
+<!--		</dependency>-->
+
+<!--		<dependency>-->
+<!--			<groupId>io.jsonwebtoken</groupId>-->
+<!--			<artifactId>jjwt</artifactId>-->
+<!--			<version>0.7.0</version>-->
+<!--		</dependency>-->
+
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.security.oauth.boot</groupId>-->
+<!--			<artifactId>spring-security-oauth2-autoconfigure</artifactId>-->
+<!--			<version>2.0.0.RELEASE</version>-->
+<!--		</dependency>-->
+
+<!--		<dependency>-->
 <!--			<groupId>org.glassfish.jersey.core</groupId>-->
 <!--			<artifactId>jersey-client</artifactId>-->
 <!--			<version>2.25.1</version>-->
